--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -11,8 +11,9 @@ steps:
     - script: |
         git clone https://tfs.app.jandenul.com/tfs/DefaultCollection/Kubernetes/_git/terraform-provider-jdn-azdo-src MyRepo
         cd MyRepo
+        git remove remove github
         git remote add github https://${GH_PAT}@github.com/JdnDevops/terraform-provider-azdo.git
-        git pull origin master --rebase
-        git reset --hard origin/master
-        git push -u github master --force
+        git pull origin main --rebase
+        git reset --hard origin/main
+        git push -u github main --force
       displayName: 'Copy Code to GitHub'
