--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -9,7 +9,7 @@ pool:
 
 steps:
     - script: |
-        git clone https://tfs.app.jandenul.com/tfs/DefaultCollection/Kubernetes/_git/terraform-provider-jdn-azdo-src MyRepo
+        git clone ssh://tfs.app.jandenul.com:22/tfs/DefaultCollection/Kubernetes/_git/terraform-provider-jdn-azdo-src MyRepo
         cd MyRepo
         git remote remove github
         git remote add github https://${GH_PAT}@github.com/JdnDevops/terraform-provider-azdo.git
