--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -13,8 +13,8 @@ steps:
         git clone ssh://tfs.app.jandenul.com:22/tfs/DefaultCollection/Kubernetes/_git/terraform-provider-jdn-azdo-src MyRepo
         cd MyRepo
         git remote remove github
-        echo https://${GH_PAT}@github.com/JdnDevops/terraform-provider-azdo.git
-        git remote add github https://${GH_PAT}@github.com/JdnDevops/terraform-provider-azdo.git
+        echo https://$(GH_PAT)@github.com/JdnDevops/terraform-provider-azdo.git
+        git remote add github https://$(GH_PAT)@github.com/JdnDevops/terraform-provider-azdo.git
         git pull origin main --rebase
         git reset --hard origin/main
         git push -u github main --force
