--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -17,5 +17,5 @@ steps:
         git remote add github https://$(GH_PAT)@github.com/JdnDevops/terraform-provider-azdo.git
         git pull origin main --rebase
         git reset --hard origin/main
-        git push -u github main --force
+        git push -u github main --force --tags
       displayName: 'Copy Code to GitHub'
